# tuk1_numa_a

./: .editorconfig  .gitignore  Boxplots.ipynb  Boxplots.py  CMakeLists.txt  Query_plots.ods  README.md  requirements.txt  run.sh
docker/: Dockerfile
measurements/: benchmark_0.json  benchmark_1.json  benchmark_2.json  benchmark_3.json  benchmark_4.json  benchmark_5.json  benchmark_6.json
src/: CMakeLists.txt  TableGenerator.cpp  TableGenerator.h  column.h  main.cpp  numaalloc.h  random.cpp  random.h  table.cpp  table.h  table.hpp  tablegenerator.cpp  tablegenerator.h
